--- a/Social/templates/social/layout.html
+++ b/Social/templates/social/layout.html
@@ -42,8 +42,8 @@
 		<nav class="second-nav">
 			<a class="feed" href="{% url 'feed' %}">Inicio</a>
 			{% if request.user.is_authenticated %}
-			<a class="profile" href="#">Mi Perfil</a>
-			<a class="new" href="#">Crear nuevo post</a>
+			<a class="profile" href="{% url 'profile' request.user.username %}">My profile</a>
+			<a class="new" href="{% url 'post' %}">Create a new post</a>
 			{% endif %}
 			
 		</nav>
