--- a/Social/templates/social/layout.html
+++ b/Social/templates/social/layout.html
@@ -12,7 +12,7 @@
 
 	<header class="main-head">
 		<nav class="main">
-			<h1 id="logo">Hola</h1>
+			<h1 id="logo">SocialAppDjng</h1>
 			<ul>
 				{% if request.user.is_authenticated %}
 				<li><a href="{% url 'logout' %}">Logout</a></li>
@@ -40,7 +40,7 @@
 	<div class="main">
 		
 		<nav class="second-nav">
-			<a class="feed" href="{% url 'feed' %}">Inicio</a>
+			<a class="feed" href="{% url 'feed' %}">Home</a>
 			{% if request.user.is_authenticated %}
 			<a class="profile" href="{% url 'profile' request.user.username %}">My profile</a>
 			<a class="new" href="{% url 'post' %}">Create a new post</a>
