--- a/Social/templates/social/profile.html
+++ b/Social/templates/social/profile.html
@@ -20,7 +20,7 @@
 <!-- Follow items -->
 <div class="follow">
 	<div>
-		<h5>Post</h5>
+		<h5>Posts</h5>
 		<p>{{ user.posts.count }}</p>
 	</div>
 	<div>
